# python-projeto-estruturado

./: pyproject.toml
.github/workflows/: build.yml
data/output/: consolidated_data.xlsx
src/: main.py
src/pipeline/: __init__.py  extract.py  load.py  transform.py
test/: test_transform_data.py
